slider page html css finished

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     рассчитывать на прозрачные, понятные условия сотрудничества
                 </p>
                 <div class="btn-2">
-                    <button class="btn-sec"><a href="#">Задать вопрос юристу</a></button>
+                    <a href="#" class="btn-sec">Задать вопрос юристу</a>
                     <div class="btn-tel">
                         <div class="tel-1">8 800 302-92-70</div>
                         <div class="tel-2">Бесплатный звонок юристу 24/7</div>
@@ -428,62 +428,85 @@
         })
     </script>
 
-    <section class="slider">
-        <div class="carusel">
-            <div class="text-slider">Отзывы наших клиентов</div>
-            <div class="carusel-in">
-                <div class="arrow left-arrow"></div>
-                <div class="slide">
-                    <div class="slide-in">
-                        <div class="slide-all slide-f slide1">
-                            <div class="slide-head"><img src="img/user-blue.png">Вадим</div>
-                            <div class="slide-text">Спасибо огромное за грамотную помощь. Ответили очень быстро,
-                                проконсультировали, подсказали и самое главное помогли в моей ситуации. Высоко
-                                квалифицированный специалист, спасибо</div>
-                            <div class="slide-bottom">Заберут ли меня в случае общей мобилизации на войну если я</div>
+    <section class="klient-section">
+        <div class="klient">
+            <div class="top">
+                <h1>Отзывы наших клиентов</h1>
+            </div>
+            <div class="bottom">
+                <div class="left">
+                    <button>
+                        <img src="./img/chap.png" alt="">
+                    </button>
+                </div>
+                <div class="center">
+                    <div class="cards one">
+                        <div class="card-top">
+                            <div class="card-left">
+                                <img src="./img/user-blue.png" alt="">
+                            </div>
+                            <div class="card-right">
+                                <p>Вадим</p>
+                                <span>02 июля 2023</span>
+                            </div>
                         </div>
-                        <div class="slide-all slide2">
-                            <div class="slide-head"><img src="img/user-blue.png">Вадим</div>
-                            <div class="slide-text">Спасибо огромное за грамотную помощь. Ответили очень быстро,
-                                проконсультировали, подсказали и самое главное помогли в моей ситуации. Высоко
-                                квалифицированный специалист, спасибо</div>
-                            <div class="slide-bottom">Заберут ли меня в случае общей мобилизации на войну если я</div>
+                        <div class="card-center">
+                            <p>Хочу поблагодарить Веру Владимировну за оказанную мне помощь, объяснила что да как, на
+                                душе стало намного легче</p>
                         </div>
-                        <div class="slide-all slide3">
-                            <div class="slide-head"><img src="img/user-blue.png">Вадим</div>
-                            <div class="slide-text">Спасибо огромное за грамотную помощь. Ответили очень быстро,
-                                проконсультировали, подсказали и самое главное помогли в моей ситуации. Высоко
-                                квалифицированный специалист, спасибо</div>
-                            <div class="slide-bottom">Заберут ли меня в случае общей мобилизации на войну если я</div>
+                        <div class="card-bottom">
+                            <h5>Вопрос:</h5>
+                            <p>Заберут ли меня в случае общей мобилизации на войну если я</p>
                         </div>
-                        <div class="slide-all slide4">
-                            <div class="slide-head"><img src="img/user-blue.png">Вадим</div>
-                            <div class="slide-text">Спасибо огромное за грамотную помощь. Ответили очень быстро,
-                                проконсультировали, подсказали и самое главное помогли в моей ситуации. Высоко
-                                квалифицированный специалист, спасибо</div>
-                            <div class="slide-bottom">Заберут ли меня в случае общей мобилизации на войну если я</div>
+                    </div>
+                    <div class="cards two">
+                        <div class="card-top">
+                            <div class="card-left">
+                                <img src="./img/user-blue.png" alt="">
+                            </div>
+                            <div class="card-right">
+                                <p>Вадим</p>
+                                <span>02 июля 2023</span>
+                            </div>
                         </div>
-                        <div class="slide-all slide5">
-                            <div class="slide-head"><img src="img/user-blue.png">Вадим</div>
-                            <div class="slide-text">Спасибо огромное за грамотную помощь. Ответили очень быстро,
-                                проконсультировали, подсказали и самое главное помогли в моей ситуации. Высоко
-                                квалифицированный специалист, спасибо</div>
-                            <div class="slide-bottom">Заберут ли меня в случае общей мобилизации на войну если я</div>
+                        <div class="card-center">
+                            <p>Спасибо огромное за грамотную помощь. Ответили очень быстро, проконсультировали,
+                                подсказали и самое главное помогли в моей ситуации. Высоко квалифицированный специалист,
+                                спасибо</p>
                         </div>
-                        <div class="slide-all slide6">
-                            <div class="slide-head"><img src="img/user-blue.png">Вадим</div>
-                            <div class="slide-text">Спасибо огромное за грамотную помощь. Ответили очень быстро,
-                                проконсультировали, подсказали и самое главное помогли в моей ситуации. Высоко
-                                квалифицированный специалист, спасибо</div>
-                            <div class="slide-bottom">Заберут ли меня в случае общей мобилизации на войну если я</div>
+                        <div class="card-bottom">
+                            <h5>Вопрос:</h5>
+                            <p>Заберут ли меня в случае общей мобилизации на войну если я</p>
+                        </div>
+                    </div>
+                    <div class="cards three">
+                        <div class="card-top">
+                            <div class="card-left">
+                                <img src="./img/user-blue.png" alt="">
+                            </div>
+                            <div class="card-right">
+                                <p>Вадим</p>
+                                <span>02 июля 2023</span>
+                            </div>
+                        </div>
+                        <div class="card-center">
+                            <p>Хочу поблагодарить Веру Владимировну за оказанную мне помощь, объяснила что да как, на
+                                душе стало намного легче</p>
+                        </div>
+                        <div class="card-bottom">
+                            <h5>Вопрос:</h5>
+                            <p>Заберут ли меня в случае общей мобилизации на войну если я</p>
                         </div>
                     </div>
                 </div>
-                <div class="arrow right-arrow"></div>
+                <div class="right">
+                    <button>
+                        <img src="./img/ong.png" alt="">
+                    </button>
+                </div>
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
