--- a/index.html
+++ b/index.html
@@ -435,11 +435,11 @@
             </div>
             <div class="bottom">
                 <div class="left">
-                    <button>
+                    <button class="prev-btn">
                         <img src="./img/chap.png" alt="">
                     </button>
                 </div>
-                <div class="center">
+                <div class="center" id="k">
                     <div class="cards one">
                         <div class="card-top">
                             <div class="card-left">
@@ -498,15 +498,75 @@
                             <p>Заберут ли меня в случае общей мобилизации на войну если я</p>
                         </div>
                     </div>
+                    <div class="cards four">
+                        <div class="card-top">
+                            <div class="card-left">
+                                <img src="./img/user-blue.png" alt="">
+                            </div>
+                            <div class="card-right">
+                                <p>Вадим</p>
+                                <span>02 июля 2023</span>
+                            </div>
+                        </div>
+                        <div class="card-center">
+                            <p>Хочу поблагодарить Веру Владимировну за оказанную мне помощь, объяснила что да как, на
+                                душе стало намного легче</p>
+                        </div>
+                        <div class="card-bottom">
+                            <h5>Вопрос:</h5>
+                            <p>Заберут ли меня в случае общей мобилизации на войну если я</p>
+                        </div>
+                    </div>
+                    <div class="cards five">
+                        <div class="card-top">
+                            <div class="card-left">
+                                <img src="./img/user-blue.png" alt="">
+                            </div>
+                            <div class="card-right">
+                                <p>Вадим</p>
+                                <span>02 июля 2023</span>
+                            </div>
+                        </div>
+                        <div class="card-center">
+                            <p>Спасибо огромное за грамотную помощь. Ответили очень быстро, проконсультировали,
+                                подсказали и самое главное помогли в моей ситуации. Высоко квалифицированный специалист,
+                                спасибо</p>
+                        </div>
+                        <div class="card-bottom">
+                            <h5>Вопрос:</h5>
+                            <p>Заберут ли меня в случае общей мобилизации на войну если я</p>
+                        </div>
+                    </div>
+                    <div class="cards six">
+                        <div class="card-top">
+                            <div class="card-left">
+                                <img src="./img/user-blue.png" alt="">
+                            </div>
+                            <div class="card-right">
+                                <p>Вадим</p>
+                                <span>02 июля 2023</span>
+                            </div>
+                        </div>
+                        <div class="card-center">
+                            <p>Хочу поблагодарить Веру Владимировну за оказанную мне помощь, объяснила что да как, на
+                                душе стало намного легче</p>
+                        </div>
+                        <div class="card-bottom">
+                            <h5>Вопрос:</h5>
+                            <p>Заберут ли меня в случае общей мобилизации на войну если я</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="right">
-                    <button>
+                    <button class="next-btn">
                         <img src="./img/ong.png" alt="">
                     </button>
                 </div>
             </div>
         </div>
     </section>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
