yurist portal tugatildi

--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
             <div class="right">
                 <p class="p">Заказать обратный звонок</p>
                 <div class="input-container">
-                    <input type="text" id="input" required="" placeholder="Номер телефона">
+                    <input type="text" id="input" required="">
+                    <label for="input" class="label">Номер телефона</label>
                     <a href="">Заказать звонок</a>
                 </div>
                 <p class="text">Отправляя вопрос, вы соглашаетесь с условиями Пользовательского соглашения</p>
@@ -380,7 +381,7 @@
         </div>
         <div class="right">
             <div class="input-container">
-                <input type="text" id="input" required="">
+                <input type="number" id="input" required="">
                 <label for="input" class="label">Номер телефона</label>
             </div>
             <a href="">Заказать звонок</a>
@@ -439,7 +440,7 @@
                         <img src="./img/chap.png" alt="">
                     </button>
                 </div>
-                <div class="center" id="k">
+                <div class="center" id="klient-slider">
                     <div class="cards one">
                         <div class="card-top">
                             <div class="card-left">
@@ -566,6 +567,92 @@
         </div>
     </section>
 
+    <div class="yurist-portal">
+        <div class="top">
+            <h1>Юристы портала</h1>
+        </div>
+        <div class="bottom">
+            <div class="bottom-left">
+                <div class="yurist-cards">
+                    <div class="yurist-card">
+                        <div class="left">
+                            <img src="./img/yurist.png" alt="">
+                        </div>
+                        <div class="right">
+                            <p class="yurist-name">Гурьянова Вера Владимировна</p>
+                            <p class="addres">Юрист, Самара</p>
+                            <span>693 консультации</span>
+                        </div>
+                    </div>
+                    <div class="yurist-card">
+                        <div class="left">
+                            <img src="./img/yurist.png" alt="">
+                        </div>
+                        <div class="right">
+                            <p class="yurist-name">Гурьянова Вера Владимировна</p>
+                            <p class="addres">Юрист, Самара</p>
+                            <span>693 консультации</span>
+                        </div>
+                    </div>
+                    <div class="yurist-card">
+                        <div class="left">
+                            <img src="./img/yurist.png" alt="">
+                        </div>
+                        <div class="right">
+                            <p class="yurist-name">Гурьянова Вера Владимировна</p>
+                            <p class="addres">Юрист, Самара</p>
+                            <span>693 консультации</span>
+                        </div>
+                    </div>
+                    <div class="yurist-card">
+                        <div class="left">
+                            <img src="./img/yurist.png" alt="">
+                        </div>
+                        <div class="right">
+                            <p class="yurist-name">Гурьянова Вера Владимировна</p>
+                            <p class="addres">Юрист, Самара</p>
+                            <span>693 консультации</span>
+                        </div>
+                    </div>
+                    <a href="#">Все наши юристы</a>
+                </div>
+            </div>
+            <div class="bottom-right">
+                <div class="container">
+                    <div class="con-top">
+                        <h1>Задать вопрос юристу</h1>
+                        <div class="online">
+                            <img src="./img/dot.svg" alt="">
+                            Онлайн
+                        </div>
+                    </div>
+                    <div class="con-bottom">
+                        <p>Напишите ваш вопрос мы обязательно вам ответим</p>
+                        <form action="">
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Опишите вашу проблему..."></textarea>
+                            <div class="flex-form">
+                                <div class="input-container">
+                                    <input type="number" id="input" required="">
+                                    <label for="input" class="label">Номер телефона</label> <input type="number"
+                                        id="input" required="">
+                                </div>
+                                <div class="input-container">
+                                    <input type="text" id="input" required="">
+                                    <label for="input" class="label">Ваше имя</label>
+                                </div>
+                                <input type="submit" value="Отправить">
+                            </div>
+                        </form>
+                        <p>Отправляя вопрос, вы соглашаетесь с условиями Пользовательского соглашения</p>
+                        <div class="footer">
+                            <p>48 юристов</p>
+                            <p>10 минут</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
