--- a/index.html
+++ b/index.html
@@ -629,7 +629,8 @@
                     <div class="con-bottom">
                         <p>Напишите ваш вопрос мы обязательно вам ответим</p>
                         <form action="">
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Опишите вашу проблему..."></textarea>
+                            <textarea name="" id="" cols="30" rows="10"
+                                placeholder="Опишите вашу проблему..."></textarea>
                             <div class="flex-form">
                                 <div class="input-container">
                                     <input type="number" id="input" required="">
@@ -653,6 +654,85 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="top">
+            <h1>Темы справочных материалов</h1>
+        </div>
+        <div class="bottom">
+            <div>
+                <h2>А</h2>
+                <a href="#">Автокредит</a>
+                <a href="#">Авторское право</a>
+                <a href="#">Автоюрист</a>
+                <a href="#">Административное право</a>
+            </div>
+            <div>
+                <h2>Б</h2>
+                <a href="#">Банкротство</a>
+            </div>
+            <div>
+                <h2>В</h2>
+                <a href="#">Военное право</a>
+            </div>
+            <div>
+                <h2>Г</h2>
+                <a href="#">Гражданское право</a>
+            </div>
+            <div>
+                <h2>Ж</h2>
+                <a href="#">Жилищное право</a>
+            </div>
+            <div>
+                <h2>З</h2>
+                <a href="#">Земельное право</a>
+                <a href="#">Защита прав потребителей</a>
+            </div>
+            <div>
+                <h2>И</h2>
+                <a href="#">Ипотека</a>
+                <a href="#">Исполнительное производство</a>
+            </div>
+            <div>
+                <h2>К</h2>
+                <a href="#">Корпоративное право</a>
+                <a href="#">Кредиты</a>
+            </div>
+            <div>
+                <h2>М</h2>
+                <a href="#">Медицинское право</a>
+                <a href="#">Миграционное право</a>
+            </div>
+            <div>
+                <h2>Н</h2>
+                <a href="#">Наследственное право</a>
+                <a href="#">Недвижимость</a>
+            </div>
+            <div>
+                <h2>О</h2>
+                <a href="#">Образование</a>
+            </div>
+            <div>
+                <h2>С</h2>
+                <a href="#">Семейное право</a>
+                <a href="#">Соцобеспечение</a>
+                <a href="#">Судопроизводство</a>
+            </div>
+            <div>
+                <h2>Т</h2>
+                <a href="#">Таможенное право</a>
+                <a href="#">Трудовое право</a>
+            </div>
+            <div>
+                <h2>У</h2>
+                <a href="#">Уголовное право</a>
+            </div>
+            <div>
+                <h2>Ю</h2>
+                <a href="#">Юридические услуги</a>
+            </div>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 
