--- a/index.html
+++ b/index.html
@@ -4,24 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>100Yuristlar</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <div class="zayavka">
+        <div class="container">
+            <div class="top">
+                <img src="./img/close_thick.svg" alt="">
+            </div>
+            <div class="bottom">
+                <img src="./img/check.svg" alt="">
+                <h1>Спасибо, ваша заявка принята</h1>
+                <p>Мы свяжемся с вами в течение х минут</p>
+                <button>Закрыть окно</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Header coding -->
 
     <header>
         <nav>
             <div class="nav-top">
-                <img src="./img/logo.png" alt="">
+                <img src="../img/logo.png" alt="">
                 <div class="search-bar">
                     <input type="text" placeholder="Я хочу найти...">
-                    <img src="./img/search.png" alt="">
+                    <img src="../img/search.png" alt="">
                 </div>
                 <div class="button-bar">
-                    <img src="./img/chat-bubble-question.svg" alt="">
+                    <img src="../img/chat-bubble-question.svg" alt="">
                     <a href="#">Задать вопрос</a>
                 </div>
                 <div class="tel">
@@ -32,10 +46,10 @@
             <div class="nav-bottom">
                 <div class="left">
                     <a href="#">
-                        <img src="./img/phone copy.png" alt="">
+                        <img src="../img/phone copy.png" alt="">
                         Заказать звонок</a>
                     <a href="#">
-                        <img src="./img/telegram.png" alt="">
+                        <img src="../img/telegram.png" alt="">
                         Telegram</a>
                 </div>
                 <div class="center">
@@ -49,7 +63,7 @@
                 </div>
                 <div class="right">
                     <button>
-                        <img src="./img/user.png" alt="">
+                        <img src="../img/user.png" alt="">
                         Вход / Регистрация
                     </button>
                 </div>
@@ -73,19 +87,19 @@
                 </div>
                 <div class="effect">
                     <div class="one">
-                        <img src="./img/clock.png" alt="">
+                        <img src="../img/clock.png" alt="">
                         <p>Круглосуточно</p>
                     </div>
                     <div class="one">
-                        <img src="./img/money-square.png" alt="">
+                        <img src="../img/money-square.png" alt="">
                         <p>Бесплатно</p>
                     </div>
                     <div class="one">
-                        <img src="./img/lock.png" alt="">
+                        <img src="../img/lock.png" alt="">
                         <p>Конфиденциально</p>
                     </div>
                     <div class="one">
-                        <img src="./img/flash.png" alt="">
+                        <img src="../img/flash.png" alt="">
                         <p>Быстро</p>
                     </div>
                 </div>
@@ -149,7 +163,7 @@
 
     <div class="contact">
         <div class="left">
-            <img src="./img/woman.png" alt="">
+            <img src="../img/woman.png" alt="">
         </div>
         <div class="center">
             <h2>Звоните, мы работаем 24/7</h2>
@@ -157,7 +171,7 @@
         </div>
         <div class="right">
             <p>64 юриста сейчас онлайн</p>
-            <img src="./img/frame.png" alt="">
+            <img src="../img/frame.png" alt="">
         </div>
     </div>
 
@@ -173,7 +187,7 @@
             <div class="bottom-top">
                 <div class="con one">
                     <div class="con-left">
-                        <img src="./img/help-1.png" alt="">
+                        <img src="../img/help-1.png" alt="">
                     </div>
                     <div class="con-right">
                         <p>Провести бесплатную консультацию на личном приёме у нас в офисе, по телефону горячей линии
@@ -183,7 +197,7 @@
                 </div>
                 <div class="con two">
                     <div class="con-left">
-                        <img src="./img/help-2.png" alt="">
+                        <img src="../img/help-2.png" alt="">
                     </div>
                     <div class="con-right">
                         <p>В ходе консультации будет проанализирована ваша ситуация с точки зрения законодательства
@@ -194,7 +208,7 @@
             <div class="bottom-bottom">
                 <div class="con one">
                     <div class="con-left">
-                        <img src="./img/help-3.png" alt="">
+                        <img src="../img/help-3.png" alt="">
                     </div>
                     <div class="con-right">
                         <p>После чего наш специалист сможет определить все возможные пути решения вашей ситуации выявить
@@ -203,7 +217,7 @@
                 </div>
                 <div class="con two">
                     <div class="con-left">
-                        <img src="./img/help-4.png" alt="">
+                        <img src="../img/help-4.png" alt="">
                     </div>
                     <div class="con-right">
                         <p>Как показывает практика данной консультации бывает достаточно для решения вашего вопроса.
@@ -260,7 +274,7 @@
         <div class="bottom">
             <div class="card">
                 <div class="top">
-                    <img src="./img/stroller.png" alt="stroller icon" width="24px" height="24px">
+                    <img src="../img/stroller.png" alt="stroller icon" width="24px" height="24px">
                     <p>По семейным делам</p>
                 </div>
                 <div class="bottom">
@@ -272,7 +286,7 @@
             </div>
             <div class="card">
                 <div class="top">
-                    <img src="./img/ev-plug.png" alt="ev-plug icon" width="24px" height="24px">
+                    <img src="../img/ev-plug.png" alt="ev-plug icon" width="24px" height="24px">
                     <p>По вопросам ЖКХ</p>
                 </div>
                 <div class="bottom">
@@ -287,7 +301,7 @@
             </div>
             <div class="card">
                 <div class="top">
-                    <img src="./img/city.png" alt="city icon" width="24px" height="24px">
+                    <img src="../img/city.png" alt="city icon" width="24px" height="24px">
                     <p>По жилищному праву</p>
                 </div>
                 <div class="bottom">
@@ -302,7 +316,7 @@
             </div>
             <div class="card">
                 <div class="top">
-                    <img src="./img/lot-of-cash.png" alt="lot-of-cash icon" width="24px" height="24px">
+                    <img src="../img/lot-of-cash.png" alt="lot-of-cash icon" width="24px" height="24px">
                     <p>По кредитам</p>
                 </div>
                 <div class="bottom">
@@ -314,7 +328,7 @@
             </div>
             <div class="card">
                 <div class="top">
-                    <img src="./img/pin-alt.png" alt="stroller icon" width="24px" height="24px">
+                    <img src="../img/pin-alt.png" alt="stroller icon" width="24px" height="24px">
                     <p>По земельным делам</p>
                 </div>
                 <div class="bottom">
@@ -327,7 +341,7 @@
             </div>
             <div class="card">
                 <div class="top">
-                    <img src="./img/large-suitcase.png" alt="stroller icon" width="24px" height="24px">
+                    <img src="../img/large-suitcase.png" alt="stroller icon" width="24px" height="24px">
                     <p>По трудовым вопросам</p>
                 </div>
                 <div class="bottom">
@@ -342,7 +356,7 @@
             </div>
             <div class="card">
                 <div class="top">
-                    <img src="./img/bank.png" alt="bank icon" width="24px" height="24px">
+                    <img src="../img/bank.png" alt="bank icon" width="24px" height="24px">
                     <p>По приставам</p>
                 </div>
                 <div class="bottom">
@@ -355,7 +369,7 @@
             </div>
             <div class="card">
                 <div class="top">
-                    <img src="./img/group.png" alt="group icon" width="24px" height="24px">
+                    <img src="../img/group.png" alt="group icon" width="24px" height="24px">
                     <p>По гражданским делам</p>
                 </div>
                 <div class="bottom">
@@ -437,14 +451,14 @@
             <div class="bottom">
                 <div class="left">
                     <button class="prev-btn">
-                        <img src="./img/chap.png" alt="">
+                        <img src="../img/chap.png" alt="">
                     </button>
                 </div>
                 <div class="center" id="klient-slider">
                     <div class="cards one">
                         <div class="card-top">
                             <div class="card-left">
-                                <img src="./img/user-blue.png" alt="">
+                                <img src="../img/user-blue.png" alt="">
                             </div>
                             <div class="card-right">
                                 <p>Вадим</p>
@@ -463,7 +477,7 @@
                     <div class="cards two">
                         <div class="card-top">
                             <div class="card-left">
-                                <img src="./img/user-blue.png" alt="">
+                                <img src="../img/user-blue.png" alt="">
                             </div>
                             <div class="card-right">
                                 <p>Вадим</p>
@@ -483,7 +497,7 @@
                     <div class="cards three">
                         <div class="card-top">
                             <div class="card-left">
-                                <img src="./img/user-blue.png" alt="">
+                                <img src="../img/user-blue.png" alt="">
                             </div>
                             <div class="card-right">
                                 <p>Вадим</p>
@@ -502,7 +516,7 @@
                     <div class="cards four">
                         <div class="card-top">
                             <div class="card-left">
-                                <img src="./img/user-blue.png" alt="">
+                                <img src="../img/user-blue.png" alt="">
                             </div>
                             <div class="card-right">
                                 <p>Вадим</p>
@@ -521,7 +535,7 @@
                     <div class="cards five">
                         <div class="card-top">
                             <div class="card-left">
-                                <img src="./img/user-blue.png" alt="">
+                                <img src="../img/user-blue.png" alt="">
                             </div>
                             <div class="card-right">
                                 <p>Вадим</p>
@@ -541,7 +555,7 @@
                     <div class="cards six">
                         <div class="card-top">
                             <div class="card-left">
-                                <img src="./img/user-blue.png" alt="">
+                                <img src="../img/user-blue.png" alt="">
                             </div>
                             <div class="card-right">
                                 <p>Вадим</p>
@@ -560,7 +574,7 @@
                 </div>
                 <div class="right">
                     <button class="next-btn">
-                        <img src="./img/ong.png" alt="">
+                        <img src="../img/ong.png" alt="">
                     </button>
                 </div>
             </div>
@@ -576,7 +590,7 @@
                 <div class="yurist-cards">
                     <div class="yurist-card">
                         <div class="left">
-                            <img src="./img/yurist.png" alt="">
+                            <img src="../img/yurist.png" alt="">
                         </div>
                         <div class="right">
                             <p class="yurist-name">Гурьянова Вера Владимировна</p>
@@ -586,7 +600,7 @@
                     </div>
                     <div class="yurist-card">
                         <div class="left">
-                            <img src="./img/yurist.png" alt="">
+                            <img src="../img/yurist.png" alt="">
                         </div>
                         <div class="right">
                             <p class="yurist-name">Гурьянова Вера Владимировна</p>
@@ -596,7 +610,7 @@
                     </div>
                     <div class="yurist-card">
                         <div class="left">
-                            <img src="./img/yurist.png" alt="">
+                            <img src="../img/yurist.png" alt="">
                         </div>
                         <div class="right">
                             <p class="yurist-name">Гурьянова Вера Владимировна</p>
@@ -606,7 +620,7 @@
                     </div>
                     <div class="yurist-card">
                         <div class="left">
-                            <img src="./img/yurist.png" alt="">
+                            <img src="../img/yurist.png" alt="">
                         </div>
                         <div class="right">
                             <p class="yurist-name">Гурьянова Вера Владимировна</p>
@@ -622,7 +636,7 @@
                     <div class="con-top">
                         <h1>Задать вопрос юристу</h1>
                         <div class="online">
-                            <img src="./img/dot.svg" alt="">
+                            <img src="../img/dot.svg" alt="">
                             Онлайн
                         </div>
                     </div>
